Fixed styles: Double borders and illogical styling removed. Inherited styles from jquery ui overwritten. Conflicts: 	css/ding_tabroll.css

--- a/css/ding_tabroll.css
+++ b/css/ding_tabroll.css
@@ -7,7 +7,9 @@
     max-width: 1260px;
     overflow: hidden;
     margin-bottom: 15px;
+    padding: 0;
 }
+
 #featured ul.ui-tabs-nav {
     list-style: none outside none;
     margin: 0;
@@ -19,8 +21,6 @@
     border: 0 none;
     font-family: inherit;
     right: 0;
-    bottom: -1px;
-    float: left;
     font-size: 13px;
     line-height: 1.3;
     outline: 0 none;
@@ -33,6 +33,7 @@
 		border-right: 1px solid #666;
     white-space: normal;
     width: 100%;
+    top: 0;
 }
 
 #featured .ui-tabs-nav li.ui-tabs-selected {
@@ -52,11 +53,11 @@
     overflow: hidden;
     padding: 5px 5px 0 20px;
     background: none repeat scroll 0 0 #999999;
-    border-bottom: 1px solid #fff;
     font-weight: normal;
     height: 42px;
     text-transform: uppercase;
     min-width: 90%;
+    /*border-bottom: 0px;*/
 }
 
 #featured ul.ui-tabs-nav li.ui-tabs-selected a {    
